2009-06-05  Jonathan Pryor <jpryor@novell.com>

	* configure.in: Fix the build (webdoc needs to be included).

2009-06-03  Jonathan Pryor <jpryor@novell.com>

	* Makefile.am: Add webdoc to the build.

2008-12-02  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Remove AC_OUTPUT on gnunit files since they break
	make dist

2008-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile.am : remove gnunit. It does not build anymore.

2008-11-17  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Produce gendarme.exe.config from .in file (modified
	patch from Jesse Jones).

2008-11-10  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Bump to 2.3

2008-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Add Gendarme framework unit test makefile generation.

2008-10-10  Massimiliano Mantione  <massi@ximian.com>
	* Mono.Profiler/Mono.Profiler.mds, Mono.Profiler/mprof-runtime/:
	Preliminary (but working) code to control the profiler at runtime.

2008-10-09 Daniel Nauck <dna@mono-project.de>

        * Makefile.am, configure.in:
		add gsharp to the build

2008-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Add Gendarme's Design.Generic rules makefile support.

2008-08-25  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Add Gendarme's Security.Cas rules makefile support.

2008-08-16  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Add Gendarme's Design.Linq rules makefile support.

2008-08-12  Massimiliano Mantione  <massi@ximian.com>
	* Mono.Profiler/Makefile.am, Mono.Profiler/adjust-makefiles.sh:
	More fixes for the Mono.Profiler integration.

2008-08-12  Massimiliano Mantione  <massi@ximian.com>
	* Makefile.am, configure.in: Integrated Mono.Profiler in the build.
	* Mono.Profiler/configure.ac, Mono.Profiler/autogen.sh:
	Deleted (no longer needed).
	* Mono.Profiler/adjust-makefiles.sh: Added this script to fix the
	makefiles again if they are regenerated from Monodevelop.
